--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@
 body {
   font-family: "TT Lakes";
   color: #1B1C21;
-  margin: 0;
   min-width: 100%;
 }
 
@@ -46,7 +45,6 @@ body {
 .menu__logo {
     width: 96.55px;
     height: 50.81px;
-    background: url('icons/Group.svg') no-repeat left;
     flex-grow: 1;
 }
 .menu__group-button {
@@ -54,7 +52,7 @@ body {
     align-items: center;
     gap: 16px;
 }
-.menu__button {
+.button {
     display: block;
     border: 0;
     background-color: white;
@@ -66,26 +64,25 @@ body {
 .menu__group-button--visible-768 {
     display: none;
 }
-.burger {
+.button--burger {
     background: url('icons/burger.svg') no-repeat center;
 }
-.repair {
+.button--repair {
     background: url('icons/repair.svg') no-repeat right;
 }
-.checkstatus {
+.button--checkstatus {
     background: url('icons/checkstatus.svg') no-repeat right;
 }
-.call {
+.button--call {
     background: url('icons/call.svg') no-repeat center;
 }
-.chat {
+.button--chat {
     background: url('icons/chat.svg') no-repeat center;
 }
-.profile {
+.button--profile {
     background: url('icons/profile.svg') no-repeat center;
 }
-.repair__caption--visible1120,
-.checkstatus__caption--visible1120 {
+.button__caption {
     display: none;
 }
 .menu__group-button--visible-1120 {
@@ -93,8 +90,6 @@ body {
     height: 32px;
     padding-left: 20px;
 }
-
-
 .main-page {
     min-width: 320px;
     height: 509px;
@@ -111,6 +106,7 @@ h1 {
    font-size: 28px;
    color: black;
    font-weight: bold;
+   line-height: 40px;
 }
 
 .main-page__title::before {
@@ -127,6 +123,7 @@ h1 {
 .main-page__menu {
     margin-left: 16px;
     margin-top: 24px;
+    overflow-y: hidden;
 }
 
 .slide-menu {
@@ -139,20 +136,19 @@ h1 {
     margin: 0;
 }
 
-.slide-menu__link {
-    flex-basis: auto;
+.slide-menu__items {
     flex-shrink: 0;
-    list-style: none;
+    flex-basis: auto;
+}
+
+.slide-menu__link {
+    display: inline-block;
+    color: #7E7E82;
+    font-size: 16px;
     padding: 8px 9.3px 8px 16.54px;
 }
 
-.slide-menu__link a {
-    text-decoration: none;
-    color: #7E7E82;
-    font-size: 16px;
-}
-
-.slide-menu__link:first-child {
+.slide-menu__link--selected {
     border: 2px solid #B8FFEC;
     border-radius: 6px;
     background-color: #FFFFFF;
@@ -265,16 +261,15 @@ h1 {
         padding: 42px 32px 8px 0;
     }
     
-    .menu__button {
+    .button {
         width: auto;
     }
-    .repair,
-    .checkstatus {
+    .button--repair,
+    .button--checkstatus {
         visibility: visible;
         background-color: #F8F8F8;
     }
-    .repair__caption--visible1120,
-    .checkstatus__caption--visible1120 { 
+    .button__caption { 
         display: inline-block;
         font-family: "TT Lakes";
         font-size: 16px;
