--- a/style-b4.css
+++ b/style-b4.css
@@ -58,6 +58,7 @@
     width: 40px;
     height: 40px;
     transition-duration: 1s;
+    transition-property: opacity;
 }
 .icon-button--burger {
     background: url('icons/burger-active.svg') no-repeat center;
@@ -157,6 +158,7 @@
     background-color: white;
     font-weight: bold;
     transition-duration: 1s;
+    transition-property: opacity;
 }
 .lang__button--active {
     color: #7E7E82;
