--- a/style-b5.css
+++ b/style-b5.css
@@ -17,28 +17,21 @@
     margin: 16px;
 }
 .menu-brand__item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
     background-color: #FFFFFF;
     border: 1px solid #EAEAEA;
     border-radius: 6px;
 
     max-width: 206px;
-    height: 70px;
-    padding: 0 16px;
+    padding: 10px 16px;
 }
 .menu-brand__link {
-    display: inline-block;
-    text-align: center;
-}
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
 
-.menu-brand__button {
-    background: url(icon\ button/go.svg) 100% no-repeat;
-    width: 40px;
-    height: 40px;
-    border: 0;
+    background: url(icon\ button/go.svg) right no-repeat;
+    min-height: 52px;
+    width: 206px;
 }
 
 .brands__slider .swiper-pagination .swiper-pagination-bullet {
@@ -68,13 +61,15 @@
     .menu-brand__item {
         max-width: 190px;
     }
-
+    .menu-brand__link {
+        width: 190px;
+    }
     .brands__button {
         display: block;
         font-size: 16px;
         border: 0;
         padding: 0;
-        background: url('icon button/expand.svg') #F8F8F8 no-repeat left;
+        background: url('icon\ button/expand.svg') #F8F8F8 no-repeat left;
         line-height: 24px;
         margin-left: 24px;
         text-align: right;
@@ -82,14 +77,13 @@
     }
 
     .brands__button--hide {
-        background: url('icon button/expand2.svg') #F8F8F8 no-repeat left;
+        background: url('icon\ button/expand2.svg') #F8F8F8 no-repeat left;
         width: 88px;
     }
 
     .hide {
         display: none;
     }
-
 }
 
 @media (min-width: 1120px) {
@@ -105,5 +99,8 @@
     }
     .menu-brand__item {
         max-width: 206px;
+    }
+    .menu-brand__link {
+        width: 206px;
     }
 }
